<resources>
    <string name="app_name">Agendapp</string>

    <!-- Menu principal -->
    <string name="menuprincipalTabItemProximos">Próximos</string>
    <string name="menuprincipalTabItemTareas">Tareas</string>
    <string name="menuprincipalTabItemHorario">Horario</string>
    <string name="menuprincipalTabItemEventos">Eventos</string>

    <!-- Agregar tarea -->
    <string name="agregartareaTitulo">Nombre de la materia</string>
    <string name="agregartareaDescripcion">Descripción</string>
    <string name="agregartareaFechaDeFin">Fecha de entrega</string>
    <string name="agregartareaHoraDeFin">Hora de entrega</string>
    <string name="agregartareaTipo">Selecciona el tipo de actividad</string>
    <string name="agregartareaRecordatorio">Agregar recordatorio</string>

    <!-- Agregar evento -->
    <string name="agregareventoTitulo">Titulo</string>
    <string name="agregareventoDescripcion">Descripción</string>
    <string name="agregareventoFechaDeInicio">Fecha de inicio</string>
    <string name="agregareventoHoraDeInicio">Hora de inicio</string>
    <string name="agregareventoFechaDeFin">Fecha de finalización</string>
    <string name="agregareventoHoraDeFin">Hora de finalización</string>
    <string name="agregareventoUbicacion">Ubicación</string>
    <string name="agregareventoTipo">Selecciona el tipo de evento</string>
    <string name="agregareventoRecordatorio">Agregar recordatorio</string>

    <!-- Agregar recordatorio -->
    <string name="agregarhorarioTitulo">Nombre de la materia</string>
    <string name="agregarhorarioDescripcion">Descripción</string>
    <string name="agregarhorarioFechaDeInicio">Fecha</string>
    <string name="agregarhorarioHoraDeInicio">Hora de inicio</string>
    <string name="agregarhorarioHoraDeFin">Hora de finalización</string>
    <string name="agregarhorarioUbicacion">Ubicación</string>
    <string name="agregarhorarioRecordatorio">Agregar recordatorio</string>

    <!-- Mostrar tarea -->
    <string name="mostrartareaTitulo">Nombre de la materia</string>
    <string name="mostrartareaDescripcion">Descripción</string>
    <string name="mostrartareaFechaDeFin">Fecha de entrega</string>
    <string name="mostrartareaHoraDeFin">Hora de entrega</string>
    <string name="mostrartareaTipo">Tipo de actividad</string>
    <string name="mostrartareaRecordatorio">Recordatorio</string>

    <!-- Mostrar evento -->
    <string name="mostrareventoTitulo">Titulo</string>
    <string name="mostrareventoDescripcion">Descripción</string>
    <string name="mostrareventoFechaDeInicio">Fecha de inicio</string>
    <string name="mostrareventoHoraDeInicio">Hora de inicio</string>
    <string name="mostrareventoFechaDeFin">Fecha de finalización</string>
    <string name="mostrareventoHoraDeFin">Hora de finalización</string>
    <string name="mostrareventoUbicacion">Ubicación</string>
    <string name="mostrareventoTipo">Tipo de evento</string>
    <string name="mostrareventoRecordatorio">Recordatorio</string>

    <!-- Mostrar horario -->
    <string name="mostrarhorarioTitulo">Nombre de la materia</string>
    <string name="mostrarhorarioDescripcion">Descripción</string>
    <string name="mostrarhorarioFechaDeInicio">Fecha</string>
    <string name="mostrarhorarioHoraDeInicio">Hora de inicio</string>
    <string name="mostrarhorarioHoraDeFin">Hora de finalización</string>
    <string name="mostrarhorarioUbicacion">Ubicación</string>
    <string name="mostrarhorarioRecordatorio">Recordatorio</string>

    <!-- Editar tarea -->
    <string name="editartareaTitulo">Nombre de la materia</string>
    <string name="editartareaDescripcion">Descripción</string>
    <string name="editartareaFechaDeFin">Fecha de entrega</string>
    <string name="editartareaHoraDeFin">Hora de entrega</string>
    <string name="editartareaTipo">Selecciona el tipo de actividad</string>
    <string name="editartareaRecordatorio">Agregar recordatorio</string>

    <!-- Editar evento -->
    <string name="editareventoTitulo">Titulo</string>
    <string name="editareventoDescripcion">Descripción</string>
    <string name="editareventoFechaDeInicio">Fecha de inicio</string>
    <string name="editareventoHoraDeInicio">Hora de inicio</string>
    <string name="editareventoFechaDeFin">Fecha de finalización</string>
    <string name="editareventoHoraDeFin">Hora de finalización</string>
    <string name="editareventoUbicacion">Ubicación</string>
    <string name="editareventoTipo">Selecciona el tipo de evento</string>
    <string name="editareventoRecordatorio">Agregar recordatorio</string>

    <!-- Editar horario -->
    <string name="editarhorarioTitulo">Nombre de la materia</string>
    <string name="editarhorarioDescripcion">Descripción</string>
    <string name="editarhorarioFechaDeInicio">Fecha</string>
    <string name="editarhorarioHoraDeInicio">Hora de inicio</string>
    <string name="editarhorarioHoraDeFin">Hora de finalización</string>
    <string name="editarhorarioUbicacion">Ubicación</string>
    <string name="editarhorarioRecordatorio">Agregar recordatorio</string>

    <!-- Configuraciones -->
    <string name="configuracionesTareas">Establecer recordatorio predeterminado para las tareas</string>
    <string name="configuracionesEventos">Establecer recordatorio predeterminado para las eventos</string>
    <string name="configuracionesHorarios">Establecer recordatorio predeterminado para las horarios</string>

    <!-- Botones -->
    <string name="botonAgregar">Agregar</string>
    <string name="botonAgregarTarea">Agregar tarea</string>
    <string name="botonAgregarEvento">Agregar evento</string>
    <string name="botonAgregarHorario">Agregar horario</string>
    <string name="botonConfiguraciones">Configuraciones</string>
    <string name="botonGuardar">Guardar</string>
    <string name="botonEscogerHora">Escoger hora</string>
    <string name="botonEscogerFecha">Escoger fecha</string>
    <string name="botonBorrar">Borrar</string>

    <!-- Textos por defecto -->
    <string name="defectoVacio">""</string>

    <!-- Mensajes -->
    <string name="mensajeAgrego">Se ha agregado el elemento</string>
    <string name="mensajeElimino">Se ha eliminado el elemento</string>
    <string name="mensajeEdito">Se ha editado el elemento</string>
    <string name="mensajeFaltanDatos">Rellene todos los elementos</string>
    <string name="mensajeSinActividades">No hay actividades por mostrar</string>
    <string name="mensajeGardadoConfiguraciones">Se han guardado las configuraciones</string>

</resources>