<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarHorarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editarhorarioEntradaTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_entrada"
                android:ems="10"
                android:hint="@string/editarhorarioTitulo"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editarhorarioEntradaDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_entrada"
                android:ems="10"
                android:hint="@string/editarhorarioDescripcion"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editarhorarioEntradaFechaDeInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_entrada"
                android:ems="10"
                android:hint="@string/editarhorarioFechaDeInicio"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editarhorarioEntradaHoraDeInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_entrada"
                android:ems="10"
                android:hint="@string/editarhorarioHoraDeInicio"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editarhorarioEntradaHoraDeFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_entrada"
                android:ems="10"
                android:hint="@string/editarhorarioHoraDeFin"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editarhorarioEntradaUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_entrada"
                android:ems="10"
                android:hint="@string/editarhorarioUbicacion"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <CheckBox
                android:id="@+id/editarhorarioCheckRecordatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/editarhorarioRecordatorio" />

            <Spinner
                android:id="@+id/editarhorarioSpinnerRecordatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/item_spinner"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.constraintlayout.utils.widget.MockView
                android:id="@+id/mockView8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/colorSecundario"
        android:clickable="true"
        android:contentDescription="@string/botonGuardar"
        android:focusable="true"
        android:onClick="guardar"
        android:tint="@color/colorTextoClaro"
        app:backgroundTint="@color/colorSecundario"
        app:elevation="25dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorSecundarioClaro"
        app:srcCompat="@drawable/icono_guardar" />
</androidx.constraintlayout.widget.ConstraintLayout>